# routes/api.php
@@ -48,6 +48,7 @@ Route::get('/new-products', [ProductController::class, 'newProduct']);
 Route::get('/products-by-subcategory/{id_subcategory}', [ProductController::class, 'productsBySubCategory']);
 Route::get('/products-by-category/{id_category}', [ProductController::class, 'getProductsByCategory']);
 Route::get('/products/{id_product}', [ProductController::class, 'getProductDetail']);
+Route::post('/products/{id_product}', [ProductController::class, 'updateProduct']);
 
 use App\Http\Controllers\API\CartController;
 //
